# unfoldNd

./: .conda_env.yml  .darglint  .envrc  .flake8  .gitignore  .isort.cfg  LICENSE  README.org  black.toml  changelog.md  makefile  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: example.yaml  lint-black.yaml  lint-darglint.yaml  lint-flake8.yaml  lint-isort.yaml  lint-pydocstyle.yaml  python-publish.yml  test.yaml
examples/: example.py  example_fold.py  example_unfold_transpose.py
requirements/: lint.txt  test.txt
test/: __init__.py  fold_settings.py  settings.py  test___init__.py  test_fold.py  test_unfold.py  test_unfold_transpose.py  test_utils.py  unfold_settings.py  unfold_transpose_settings.py  utils.py  utils_settings.py
unfoldNd/: __init__.py  fold.py  unfold.py  unfold_transpose.py  utils.py
