# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = unfoldNd
description = N-dimensional unfold (im2col) and fold (col2im) in PyTorch
url = https://github.com/f-dangel/unfoldNd
author = Felix Dangel
author-email =
license = MIT
long-description = N-dimensional unfold (im2col) and fold (col2im) in PyTorch
keywords = PyTorch, im2col, col2im, unfold, fold
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find:
include_package_data = True
setup_requires =
  packaging
  setuptools>=38.3
  setuptools_scm
# Dependencies of the project (semicolon/line-separated):
install_requires =
    packaging
    torch
    numpy
# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.8

[options.extras_require]
# Dependencies needed to run the tests (semicolon/line-separated)
test =
    coveralls
    pytest
    pytest-cov
    pytest-optional-tests

# Dependencies needed for linting (semicolon/line-separated)
lint =
    black
    flake8
    mccabe
    pycodestyle
    pyflakes
    pep8-naming
    flake8-bugbear
    flake8-comprehensions
    flake8-tidy-imports
    darglint
    pydocstyle
    isort

# Linting
[flake8]
select = B,C,E,F,P,W,B9
max-line-length = 80
max-complexity = 10
ignore =
	# replaced by B950 (max-line-length + 10%)
    # max-line-length
	E501,
	# ignored because pytorch uses dict
    # use {} instead of dict()
	C408,
	# Not Black-compatible
    # whitespace before :
	E203,
    # missing whitespace after ','
	E231,
    # trailing whitespace
	W291,
    # line break before binary operator
	W503,
    # line break after binary operator
	W504,
    # `zip()` without an explicit `strict=` parameter
	B905,
exclude = docs, docs_src, build, .git, .eggs

[isort]
profile=black
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True

# Docstring linting
[pydocstyle]
convention = google
# exclude directories, see
# https://github.com/PyCQA/pydocstyle/issues/363#issuecomment-625563088
match_dir = ^(?!(docs|docs_src|build|.git|src|exp)).*
match = .*\.py

[darglint]
docstring_style = google
# short, long, full
strictness = short
